<resources>
    <string name="app_name">Punissement</string>
    <string name="tab_text_1" translatable="false">Punissements</string>
    <string name="tab_text_2" translatable="false">Stagiares</string>
    <string name="tab_text_3" translatable="false">Groupes</string>
    <string name="tab_text_4" translatable="false">Type Punition</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nom_stagiaire">Nom</string>
    <string name="prenom_stagiaire">Prénom</string>
    <string name="email_stagiaire">Email</string>
    <string name="mobile_stagiaire">Mobile</string>
    <string name="nom_groupe">Groupe</string>
    <string name="icon_groupe">icon groupe</string>
    <string name="icon_stagiaire">icon stagiaire</string>
    <string name="lieu">Lieu</string>
    <string name="date">Date</string>
    <string name="libelle">Libelle</string>
    <string name="title">Title</string>
    <string name="search">Search</string>

    <string name="frag4_title">Title</string>
    <string name="frag4_description">Description</string>

    <string-array name="groupes">
        <item>Groupe 1</item>
        <item>Groupe 2</item>
        <item>Groupe 3</item>
        <item>Groupe 4</item>
    </string-array>

    <string-array name="types">
        <item>Plat salé</item>
        <item>Plat sucré</item>
    </string-array>

</resources>
